--- a/src/Ismoil.html
+++ b/src/Ismoil.html
@@ -80,17 +80,17 @@
         </div>
       </div>
     </header>
-       <div class=" flex gap-7 justify-center py-7 bg-yellow-200">
+       <div class="hidden md:flex gap-7 justify-center py-7 bg-yellow-200">
           <a href="./Ismoil.html" class="border-b-[3px] border-b-rose-700" >Home</a>
           <a href="./Ismoil2.html" >Manu</a>
-          <a href="#">Contact</a>
-          <a href="#">About</a>
-          <a href="#">Portfolio</a>
-          <a href="#">Single Portfolio</a>
-          <a href="#">Blogs</a>
-          <a href="#">Blogs2</a>
-          <a href="#">Blogs3</a>
-          <a href="#">Blogs3</a>
+          <a href="./fakh.html">Contact</a>
+          <a href="./fakh2.html">About</a>
+          <a href="./fakh3.html">Portfolio</a>
+          <a href="./page.html">Single Portfolio</a>
+          <a href="./page2.html">Blogs</a>
+          <a href="./page3.html">Blogs2</a>
+          <a href="./page4.html">Blogs3</a>
+          <a href="./shakha.html">Blogs3</a>
         </div>
     <main>
       <section>
