--- a/src/fakh2.html
+++ b/src/fakh2.html
@@ -23,8 +23,21 @@
     <h1 class="text-[35px] md:text-[100px]  font-bold md:ml-[500px] ml-20 md:mt-[150px]">Who We Are</h1>
     <p class="md:text-[20px] font-bold ml-10 md:ml-[510px] mt-[15px]">The most important thing for us is to give you the <br> comfortable dining experience</p>
 
-    </div>
+    </div>  
+   <div class=" hidden md:flex gap-7 justify-center py-7 bg-yellow-200">
+          <a href="./Ismoil.html">Home</a>
+          <a href="./Ismoil2.html">Manu</a>
+          <a href="./fakh.html">Contact</a>
+          <a href="./fakh2.html">About</a>
+          <a href="./fakh3.html">Portfolio</a>
+          <a href="./page.html">Single Portfolio</a>
+          <a href="./page2.html">Blogs</a>
+          <a href="./page3.html">Blogs2</a>
+          <a href="./page4.html">Blogs3</a>
+          <a href="./shakha.html">Blogs3</a>
+        </div>
          <img class="md:block hidden absolute z-[1] w-[220px] ml-[520px] " src="/src/Tomato.png" alt="">
+         
    </div>
 
      <div class="w-[90%] m-auto mt-[100px] items-center flex md:flex-nowrap flex-wrap justify-between">
