--- a/src/fakh3.html
+++ b/src/fakh3.html
@@ -21,9 +21,21 @@
     </div> 
 
     <h1 class="text-[40px] md:text-[100px]  font-bold md:ml-[250px] ml-20 md:mt-[150px]">Portfolio - Grids</h1>
+    
 </div> 
-
-<img class="md:ml-[370px] w-[400px] md:w-[600px]" src="/src/Filters.png" alt="">
+  <div class=" hidden md:flex gap-7 justify-center py-7 bg-yellow-200">
+          <a href="./Ismoil.html">Home</a>
+          <a href="./Ismoil2.html">Manu</a>
+          <a href="./fakh.html">Contact</a>
+          <a href="./fakh2.html">About</a>
+          <a href="./fakh3.html">Portfolio</a>
+          <a href="./page.html">Single Portfolio</a>
+          <a href="./page2.html">Blogs</a>
+          <a href="./page3.html">Blogs2</a>
+          <a href="./page4.html">Blogs3</a>
+          <a href="./shakha.html">Blogs3</a>
+        </div>
+<img class="md:ml-[370px] w-[400px] md:w-[600px]" m src="/src/Filters.png" alt="">
 
     <div class="w-[90%]  m-auto flex flex-wrap justify-between mt-[50px]">
         <div class="bg-[url(/src/bg4.png)] md:h-[80vh]    bg-no-repeat bg-contain text-white w-[600px]">
