--- a/src/page4.html
+++ b/src/page4.html
@@ -26,6 +26,18 @@
                 <p class="my-auto text-[white] md:text-xl text-xs">Julie ChristieOctober 17,20213:33 pm2 comments</p>
                 </div>
     </div>
+      <div class=" hidden md:flex gap-7 justify-center py-7 bg-yellow-200">
+          <a href="./Ismoil.html">Home</a>
+          <a href="./Ismoil2.html">Manu</a>
+          <a href="./fakh.html">Contact</a>
+          <a href="./fakh2.html">About</a>
+          <a href="./fakh3.html">Portfolio</a>
+          <a href="./page.html">Single Portfolio</a>
+          <a href="./page2.html">Blogs</a>
+          <a href="./page3.html">Blogs2</a>
+          <a href="./page4.html">Blogs3</a>
+          <a href="./shakha.html">Blogs3</a>
+        </div>
     <div>
         <p class="text-center text-xl md:py-[50px] font-bold">Home / Blog / Three Ideas for Cooking Goat Meat at Home</p>
         <p class="md:w-[70%] px-[40px] mx-auto md:text-xl">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Purus lorem id penatibus imperdiet. 
