--- a/src/shakha.html
+++ b/src/shakha.html
@@ -21,6 +21,18 @@
         </div>
 <p class="text-center text-white md:text-7xl md:w-[65%] mx-auto font-serif mt-[100px] text-4xl">Deep Sea Snow White Cod Fillet</p>
     </div>
+      <div class=" hidden md:flex gap-7 justify-center py-7 bg-yellow-200">
+          <a href="./Ismoil.html">Home</a>
+          <a href="./Ismoil2.html">Manu</a>
+          <a href="./fakh.html">Contact</a>
+          <a href="./fakh2.html">About</a>
+          <a href="./fakh3.html">Portfolio</a>
+          <a href="./page.html">Single Portfolio</a>
+          <a href="./page2.html">Blogs</a>
+          <a href="./page3.html">Blogs2</a>
+          <a href="./page4.html">Blogs3</a>
+          <a href="./shakha.html">Blogs3</a>
+        </div>
     <div class="md:flex justify-around md:mt-[50px]">
         <div>
             <div><img src="./Image (22).png" alt="" class="md:w-[70%] p-[10px]"></div>
