--- a/src/page3.html
+++ b/src/page3.html
@@ -23,6 +23,18 @@
 <p class="text-center  text-xl py-[20px] text-gray-400">It is easy way to create your beatiful blog for daily</p>
     
 </div>
+  <div class=" hidden md:flex gap-7 justify-center py-7 bg-yellow-200">
+          <a href="./Ismoil.html">Home</a>
+          <a href="./Ismoil2.html">Manu</a>
+          <a href="./fakh.html">Contact</a>
+          <a href="./fakh2.html">About</a>
+          <a href="./fakh3.html">Portfolio</a>
+          <a href="./page.html">Single Portfolio</a>
+          <a href="./page2.html">Blogs</a>
+          <a href="./page3.html">Blogs2</a>
+          <a href="./page4.html">Blogs3</a>
+          <a href="./shakha.html">Blogs3</a>
+        </div>
 <div class="mt-[50px]">
         <p class="p-[50px]">Home / Blog / Blog  Two Columns</p>
  <div class="md:flex justify-evenly px-[50px] gap-[20px]">
